# mpkg

./: .gitignore  README.md  build_all  build_debug_all  clean_all
chroot_installer/: CMakeLists.txt  ISOBUILD.example  TODO  add_default_services.sh  agibootstrap  chroot  create-livecd.sh  generate_ssh_keys  install_virtual_machine.sh  kde-x86.sh  livecd-example-config.sh  minimal.list  mklivecd  mklivecd.conf  mount_specials.sh  mpkg.xml  mpkg.xml.system  openbox-x86_64.sh  packages.db  run_chroot_ssh.sh  uname.x86
chroot_installer/live-elements/: 10-keymap.conf  10-keymap.conf.en  20-fbdev.conf  20-modesetting.conf  20-nouveau.conf  20-nv.conf  20-vesa.conf  autostart.sh  custom.conf  en.cfg  fstab  init  initrd32.img  initrd64.img  isolinux.cfg  lang.sh  langswitch  make_rootfs.sh  makeiso.sh  obmenugen.schema  passwd  rootdev  ru.cfg  shadow  videoswitch
chroot_installer/live-elements/syslinux32/: isolinux.cfg  vesainfo.c32  vesamenu.c32
chroot_installer/live-elements/syslinux64/: isolinux.cfg  linux.c32
chroot_installer/old-examples/: gnome-x86.sh  kde-x86_64.sh  openbox-x86.sh
chroot_installer/plugins/: gdm-gnome-autologin  kdm-autologin  remove_extra_locales  sudo_installer  sudo_nopasswd
console/: CMakeLists.txt  altlist.cpp  altshow.cpp  amerge  checkbackups.cpp  checkconfig.cpp  checkdeps.cpp  checklibdeps.cpp  collectfileindex.cpp  compareversions.cpp  conflicts.cpp  createdeltas.cpp  deleteprofile.cpp  depgraph.cpp  deporder.cpp  deppath.cpp  fixdeps.cpp  getopt.cpp  installpkg-ng2.cpp  listprofiles.cpp  maintainer.cpp  makepkg  mkabuild  mkpkg_generator.sh  mpkg  mpkg-getabuild  mpkg-importsrc  mpkgsrc  quicklist.cpp  rollback.cpp  saveprofile.cpp  setmeta.cpp  setopt.cpp  setprofile.cpp  spkg2abuild.cpp  transactions.cpp  unused.cpp  update-all-caches  validator.cpp  vercmp.cpp
console/aliases/: buildsrcpkg  mpkg-add_rep  mpkg-build  mpkg-check  mpkg-clean  mpkg-commit  mpkg-convert_dir  mpkg-delete_rep  mpkg-disable_rep  mpkg-distupgrade-kde3  mpkg-distupgrade-kde4  mpkg-enable_rep  mpkg-export  mpkg-exportinstalled  mpkg-filesearch  mpkg-gendeps  mpkg-gendeps2  mpkg-getrepositorylist  mpkg-index  mpkg-install  mpkg-installfromlist  mpkg-installgroup  mpkg-list  mpkg-list_rep  mpkg-listgroup  mpkg-listgroups  mpkg-listupdates  mpkg-menu  mpkg-purge  mpkg-reinstall  mpkg-remove  mpkg-removegroup  mpkg-reset  mpkg-search  mpkg-searchdescription  mpkg-show  mpkg-show_queue  mpkg-sync  mpkg-update  mpkg-upgrade  (+4 more)
console/scripts/: mpkglddcheck.sh
guiinstaller/guisetup/: CMakeLists.txt  custompkgset.h  customsetup.cpp  customsetup.h  customsetup.ui  guisetup.desktop  guisetup_ru.qm  guisetup_ru.ts  guisetup_uk.ts  help.cpp  help.h  help.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  mount.cpp  mount.h  mount.ui  thread.cpp  thread.h
guiinstaller/langselect/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
i18n/: CMakeLists.txt  generate_mo  mpkg-template.pot  po_extract  ru.po  uk.po
i18n/man_ru/buildpkg/: buildpkg.1
i18n/man_ru/buildsrcpkg/: buildsrcpkg.1
i18n/man_ru/mpkg-add_rep/: mpkg-add_rep.1
i18n/man_ru/mpkg-build/: mpkg-build.1
installer/: CMakeLists.txt  composite.cpp  composite_setup.cpp  composite_setup.h  parted_tools.cpp  parted_tools.h  raidmanager.cpp  raidtool.cpp  raidtool.h  setup.cpp  setup.h
installer/ati-patch/: 2.6.29.x_fglrx-9.3.patch  install_patch.sh
installer/initrd/: build  unpack
installer/initrd.openbox/: build  initrd.new  make_local.sh  make_rootfs.sh  update
installer/initrd.squash/: make_rootfs.sh  pack  update
installer/scripts/: fastsetup  this
installer2/: CMakeLists.txt  alternatives.cpp  bootloader.cpp  bootloader_target.cpp  create_dirs.sh  default_paths.h  formatting.cpp  framebuffer.cpp  helper_functions.cpp  helper_functions.h  language.cpp  mountpoints.cpp  nvidia_drivers.cpp  partitioning.cpp  pkgset.cpp  pkgset.h  pkgsource.cpp  root.cpp  runner.sh  setup.cpp  setup.h  swap.cpp  update_cache.cpp
libagiliasetup/: CMakeLists.txt  agiliasetup.cpp  agiliasetup.h  parser-test.cpp  parser.cpp
libagiliasetup/support-files/: getcdromlist.sh  reboot_after_10_seconds.sh
manager/: CMakeLists.txt  aboutbox.cpp  aboutbox.h  aboutbox.ui  corethread.cpp  corethread.h  db.cpp  db.h  db.ui  errorbus.cpp  groups.xml  loading.cpp  loading.h  loading.ui  main.cpp  mainwindow.cpp  mainwindow.h  manager.pro  packageview.cpp  packageview.h  pkgmanager.ui  pkgmanager_ru.qm  pkgmanager_ru.ts  pkgmanager_uk.qm  pkgmanager_uk.ts  preferencesbox.cpp  preferencesbox.h  preferencesbox.ui  progress.cpp  progress.h  progresswindow.ui  search.ui  statusthread.cpp  tablelabel.cpp  tablelabel.h
manager2/: CMakeLists.txt  PackageManager2.desktop  commitdlg.cpp  commitdlg.h  commitdlg.ui  engine.cpp  engine.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  manager2.pro  pkgmanager2_ru.qm  pkgmanager2_ru.ts  pkgmanager2_uk.qm  pkgmanager2_uk.ts  progresswidget.cpp  progresswidget.h  progresswidget.ui  settings.cpp  settings.h  settings.ui
mbuilder/: CMakeLists.txt  main.cpp  mbuilder.h
mpkg-gui-installer/: CMakeLists.txt  engine.cpp  engine.h  engine.ui  guiinstaller_ru.qm  guiinstaller_ru.ts  guiinstaller_uk.qm  guiinstaller_uk.ts  main.cpp  mpkg-gui-installer.pro  mpkg-install-kde3.desktop  mpkg-install-kde4.desktop  progress.cpp  progress.h  progress.ui  thread.cpp  thread.h  xz.xml
mpkgsupport/: CMakeLists.txt  colors.h  constants.h  file_routines.cpp  file_routines.h  fsystem.cpp  fsystem.h  globals.cpp  globals.h  mpkgsupport.h  string_operations.cpp  string_operations.h  test.cpp
packagebuilder/: CMakeLists.txt  PackageBuilder.desktop  main.cpp  mainwindow.cpp  mainwindow.h  package_builder.ui  packagebuilder.pro  packagebuilder_ru.qm  packagebuilder_ru.ts  packagebuilder_uk.ts
packagebuilder/profiles/: autotools.profile  cmake.profile  python.profile  qmake.profile
textinstaller/textsetup/: CMakeLists.txt  custompkgset.h  main.cpp  mechanics.cpp  mechanics.h  mediachecker.cpp  mediachecker.h  textsetup.cpp  textsetup.h
(+269 files in other folders)
