cmake_minimum_required(VERSION 2.4)
if(COMMAND cmake_policy)
   cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

PROJECT(installer)
if (CMAKE_SIZEOF_VOID_P EQUAL 4)
	SET(X86_64 OFF)
else (CMAKE_SIZEOF_VOID_P EQUAL 4)
	SET(X86_64 ON)
	ADD_DEFINITIONS( -DX86_64)
endif(CMAKE_SIZEOF_VOID_P EQUAL 4)

ADD_DEFINITIONS( -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -DLARGEFILE64_SOURCE -DDL_CLEANUP -I. -I/usr/include/libxml2 -Wall -W -DNEW_INSTALL_SYSTEM -DUSE_SYSTEM_SED -DDEP_NORMALIZE -DLINUX_DEFINED )

ADD_DEFINITIONS(${CXXFLAGS})
ADD_EXECUTABLE(setup setup raidtool)
TARGET_LINK_LIBRARIES(setup mpkg parted mpkg-parted)
ADD_EXECUTABLE(raidtool raidtool raidmanager)
TARGET_LINK_LIBRARIES(raidtool mpkg parted mpkg-parted)

INSTALL(TARGETS setup DESTINATION bin)
INSTALL(TARGETS raidtool DESTINATION bin)

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/scripts/getcdromlist.sh" DESTINATION bin PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE )
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/scripts/this" DESTINATION bin PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE )

